# tititalk-windows

./: .gitignore  BUILD.md  DEPLOY.md  README.md  assistant.html  companion.html  index.html  package.json  pill.html  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml
docs/: RELEASE_FLOW.md
public/pets/: pets.json
scripts/: publish-windows-release.sh  winget-prepare.sh
src/: App.tsx  AssistantApp.tsx  CompanionApp.tsx  PillApp.tsx  assistant.tsx  companion-main.tsx  companion.tsx  pill.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.local.conf.json
src-tauri/capabilities/: default.json
src-tauri/pets/aka-shiba/: pet.json
src-tauri/pets/boba/: pet.json
src-tauri/pets/byte-bunny/: pet.json
src-tauri/pets/lulu-capybara/: pet.json
src-tauri/pets/pixel-panda/: pet.json
src-tauri/src/: app_context.rs  asr.rs  asr_local.rs  asr_prewarm.rs  asr_stream.rs  assistant.rs  audio.rs  batch_transcribe.rs  companion.rs  config.rs  history.rs  hotkey.rs  hotword_candidate.rs  insertion.rs  lib.rs  main.rs  mouse_hotkey.rs  pill.rs  rewrite_selection.rs  state.rs  stylist.rs  system_audio_muter.rs  text_post_process.rs  translate.rs  tray.rs
src-tauri/src/account/: api_client.rs  auth.rs  billing.rs  keystore.rs  license.rs  mod.rs  sync.rs
src-tauri/src/companion/: app_watcher.rs  catalog.rs  mod.rs  personality.rs  speech.rs  state.rs  window.rs
src/companion/: CompanionApp.tsx  CompanionStateManager.ts  DecorationStore.tsx  Pet.tsx  PetBubble.tsx  PetContextMenu.tsx  PetEngine.ts  PetSpeechBubble.tsx  PetView.tsx  ShareCard.ts  bubbles.ts  companion.css  types.ts
src/components/: AccountSection.tsx  AccountSheet.tsx  BatchTranscribePanel.tsx  ConflictDialog.tsx  CrossSearchSheet.tsx  HistoryQuotaBanner.tsx  Icon.tsx  MeetingProbeBanner.tsx  Onboarding.tsx  OnboardingRoleSheet.tsx  PersonalizationCard.tsx  RepolishDialog.tsx  SettingsSheet.tsx  TypelessRow.tsx  TypelessSheet.tsx
src/lib/: account.ts  api.ts  companion-api.ts  design-tokens.ts  i18n.ts  persona-router.ts  pill-constants.ts  role-catalog.ts  types.ts  updater.ts  wave3-api.ts
src/pill-themes/: AnnotationPill.tsx  AuroraPill.tsx  LanternPill.tsx  MinimalPill.tsx  MonoPill.tsx  SealPill.tsx  TelegraphPill.tsx  TitiPill.tsx  TypelessPill.tsx  types.ts
tests/win-ui/: README.md  Smoke.ps1
winget/: TiTiTalk.TiTiTalk.installer.yaml  TiTiTalk.TiTiTalk.locale.zh-CN.yaml  TiTiTalk.TiTiTalk.yaml
