[package]
name = "tititalk"
version = "0.11.0"
description = "TiTiTalk Windows — voice-to-text input"
authors = ["TiTiTalk"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tititalk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
# (P1-11 历史导出 2026-05-06) plugin-fs 写文件 — 跟 plugin-dialog.save 配套
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
hound = "3.5"
once_cell = "1"
parking_lot = "0.12"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# Streaming ASR over WebSocket — tititalk_cloud 真流式恢复（v0.7.6）。
# rustls-tls-webpki-roots 跟 reqwest 现有 TLS 栈对齐，避免双 TLS 实现+重复 cert 解析。
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# Audio capture (WASAPI on Windows)
cpal = "0.15"

# P0 wave 3 #9 — 批量音频文件解码（mp3 / m4a / opus / wav 等 → 16k mono i16 PCM）
# 用 symphonia 是因为 hound 只能 WAV，其它常见格式都靠这个；feature 列表挑解
# 码器避免拉满整个 codec 池让 binary 膨胀。
symphonia = { version = "0.5", default-features = false, features = ["mp3", "isomp4", "aac", "wav", "flac", "vorbis"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    # P0 wave 3 #2 #12 — 前台窗口/进程查询（GetForegroundWindow + QueryFullProcessImageName）
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
